[gd_scene load_steps=10 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://Imovers/MainFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Maps/tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Maps/view.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://Maps/meshlib.meshlib" type="MeshLibrary" id=7]

[sub_resource type="SpatialMaterial" id=1]
resource_name = "rock"
albedo_color = Color( 0.909804, 0.517647, 0.388235, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 1, 1 )

[node name="World" type="Spatial"]
script = ExtResource( 6 )
mapsize = Vector2( 75, 75 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0, 1, -3.09087e-08, 0.866025, 1.54543e-08, 0.5, 0.5, -2.67677e-08, -0.866025, 0, 20, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 20 )

[node name="MainFrame" parent="." instance=ExtResource( 2 )]

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 7 )
use_in_baked_light = true
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Soil" type="MeshInstance" parent="GridMap"]
mesh = SubResource( 2 )
material/0 = null

[node name="Control2" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_top = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
margin_left = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control2/VBoxContainer"]
margin_right = 150.0
margin_bottom = 16.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="HSlider2" type="HSlider" parent="Control2/VBoxContainer"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 36.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="HSlider3" type="HSlider" parent="Control2/VBoxContainer"]
margin_top = 40.0
margin_right = 150.0
margin_bottom = 56.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="HSlider4" type="HSlider" parent="Control2/VBoxContainer"]
margin_top = 60.0
margin_right = 150.0
margin_bottom = 76.0
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Control/ViewportContainer"]
size = Vector2( 150, 150 )
own_world = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Navigation2D" type="Navigation2D" parent="Control/ViewportContainer/Viewport"]

[node name="TileMap" type="TileMap" parent="Control/ViewportContainer/Viewport/Navigation2D"]
scale = Vector2( 0.005, 0.005 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 200, 200 )
format = 1

[node name="Camera2D" type="Camera2D" parent="Control/ViewportContainer/Viewport"]
current = true

[node name="indicator" type="TextureRect" parent="Control/ViewportContainer/Viewport/Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_top = -20.0
margin_right = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minus" type="Button" parent="Control/HBoxContainer"]
margin_right = 37.0
margin_bottom = 20.0
text = "min"

[node name="regen" type="Button" parent="Control/HBoxContainer"]
margin_left = 41.0
margin_right = 89.0
margin_bottom = 20.0
text = "regen"

[node name="max" type="Button" parent="Control/HBoxContainer"]
margin_left = 93.0
margin_right = 132.0
margin_bottom = 20.0
text = "max"

[connection signal="quit" from="Player" to="." method="_on_Player_quit"]
[connection signal="pressed" from="Control/HBoxContainer/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/regen" to="." method="_on_regen_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/max" to="." method="_on_max_pressed"]
